// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressChecker should render correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderBottomWidth": 1,
          },
          {
            "paddingTop": 0,
            "zIndex": 1,
          },
          {
            "backgroundColor": "#FFF9F6",
          },
          {
            "borderBottomWidth": 1,
            "borderColor": "#FEEDE5",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "paddingBottom": 6,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 6,
            },
            {},
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexBasis": "0%",
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
              "gap": 4,
            }
          }
        >
          <Text
            allowFontScaling={false}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                false,
                [
                  {
                    "fontFamily": "Baloo2-Bold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 26,
                  },
                  {},
                  {
                    "color": "#2B1911",
                  },
                  {
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                ],
                false,
              ]
            }
          >
            Address checker
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 10,
              "justifyContent": "flex-end",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        [
          {
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          false,
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "paddingBottom": 8,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 8,
            },
            {},
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexGrow": 1,
              "gap": 64,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderColor": "#099DE2",
                "borderRadius": 8,
                "borderWidth": 2,
                "gap": 10,
                "maxWidth": 230,
                "paddingBottom": 10,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 10,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFFCFA",
                  "borderRadius": 9999,
                  "justifyContent": "center",
                  "left": -16,
                  "position": "absolute",
                  "top": 4,
                }
              }
            >
              <test-file-stub
                fill="#037DB5"
                style={
                  [
                    {
                      "height": 24,
                      "width": 24,
                    },
                    undefined,
                  ]
                }
              />
            </View>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  false,
                  {
                    "color": "#2B1911",
                  },
                  false,
                ]
              }
            >
              You can use this to verify if an address belongs to your Peach wallet
            </Text>
          </View>
          <View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 4,
                    "justifyContent": "space-between",
                    "paddingLeft": 12,
                    "paddingRight": 12,
                    "width": "100%",
                  },
                  {
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "overflow": "hidden",
                  },
                  {
                    "backgroundColor": "#FFFCFA",
                  },
                  {
                    "borderColor": "#2B1911",
                  },
                  false,
                  false,
                  {
                    "marginBottom": 1,
                    "marginTop": 1,
                  },
                  [
                    {
                      "borderRadius": 8,
                      "borderWidth": 2,
                      "paddingBottom": 8,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "paddingTop": 8,
                    },
                    {
                      "backgroundColor": "#fff",
                      "color": "#2B1911",
                    },
                  ],
                ]
              }
            >
              <TextInput
                allowFontScaling={false}
                autoCapitalize="none"
                autoCorrect={false}
                blurOnSubmit={false}
                editable={true}
                multiline={false}
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholder="bc1q ..."
                placeholderTextColor="#EAE3DF"
                removeClippedSubviews={false}
                style={
                  [
                    {
                      "flexShrink": 1,
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 18,
                      "height": 40,
                      "letterSpacing": 0.18,
                      "lineHeight": 29.25,
                      "paddingBottom": 0,
                      "paddingTop": 0,
                      "width": "100%",
                    },
                    {
                      "color": "#BAADA7",
                    },
                    false,
                    {
                      "borderColor": "transparent",
                      "borderWidth": 1,
                    },
                    false,
                  ]
                }
                textAlignVertical="center"
                value=""
              />
              <View
                style={
                  {
                    "flexDirection": "row",
                    "gap": 16,
                  }
                }
              >
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "opacity": 1,
                    }
                  }
                >
                  <test-file-stub
                    fill="#F56522"
                    style={
                      [
                        {
                          "height": 20,
                          "width": 20,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "opacity": 1,
                    }
                  }
                >
                  <test-file-stub
                    fill="#F56522"
                    style={
                      [
                        {
                          "height": 20,
                          "width": 20,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
            </View>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  false,
                  [
                    {
                      "fontFamily": "Baloo2-Medium",
                      "fontSize": 14,
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                      "marginLeft": 12,
                      "marginTop": 4,
                    },
                    {
                      "color": "#DF321F",
                    },
                  ],
                  false,
                ]
              }
            >
               
            </Text>
          </View>
          <View>
            <View
              style={
                {
                  "height": 24,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`AddressChecker should render correctly when address belongs to wallet 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -318,22 +318,22 @@
                        "paddingBottom": 0,
                        "paddingTop": 0,
                        "width": "100%",
                      },
                      Object {
-                       "color": "#BAADA7",
+                       "color": "#2B1911",
                      },
                      false,
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                      },
                      false,
                    ]
                  }
                  textAlignVertical="center"
-                 value=""
+                 value="bcrt1qm5 ... jhfgd0"
                />
                <View
                  style={
                    Object {
                      "flexDirection": "row",
@@ -470,15 +470,63 @@
              </Text>
            </View>
            <View>
              <View
                style={
+                 Array [
                    Object {
-                   "height": 24,
+                     "alignItems": "center",
+                     "alignSelf": "stretch",
+                     "flexDirection": "row",
+                     "gap": 4,
+                     "justifyContent": "center",
+                   },
+                   undefined,
+                 ]
+               }
+             >
+               <Text
+                 allowFontScaling={false}
+                 style={
+                   Array [
+                     Object {
+                       "color": "#2B1911",
+                       "fontFamily": "Baloo2-Regular",
+                       "fontSize": 16,
+                       "letterSpacing": 0.16,
+                       "lineHeight": 24,
+                     },
+                     false,
+                     Array [
+                       Object {
+                         "fontFamily": "Baloo2-SemiBold",
+                         "fontSize": 14,
+                         "letterSpacing": 0.5,
+                         "lineHeight": 24,
+                         "textTransform": "uppercase",
+                       },
+                       undefined,
+                     ],
+                     false,
+                   ]
                  }
+               >
+                 belongs to peach wallet
+               </Text>
+               <test-file-stub
+                 fill="#65A519"
+                 style={
+                   Array [
+                     Object {
+                       "height": 20,
+                       "width": 20,
+                     },
+                     undefined,
+                   ]
                  }
                />
+             </View>
            </View>
          </View>
        </View>
      </View>
    </View>"
`;

exports[`AddressChecker should render correctly when address does not belong to wallet 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -318,22 +318,22 @@
                        "paddingBottom": 0,
                        "paddingTop": 0,
                        "width": "100%",
                      },
                      Object {
-                       "color": "#BAADA7",
+                       "color": "#2B1911",
                      },
                      false,
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                      },
                      false,
                    ]
                  }
                  textAlignVertical="center"
-                 value=""
+                 value="bcrt1qm5 ... jhfgd0"
                />
                <View
                  style={
                    Object {
                      "flexDirection": "row",
@@ -470,15 +470,63 @@
              </Text>
            </View>
            <View>
              <View
                style={
+                 Array [
                    Object {
-                   "height": 24,
+                     "alignItems": "center",
+                     "alignSelf": "stretch",
+                     "flexDirection": "row",
+                     "gap": 4,
+                     "justifyContent": "center",
+                   },
+                   undefined,
+                 ]
+               }
+             >
+               <Text
+                 allowFontScaling={false}
+                 style={
+                   Array [
+                     Object {
+                       "color": "#2B1911",
+                       "fontFamily": "Baloo2-Regular",
+                       "fontSize": 16,
+                       "letterSpacing": 0.16,
+                       "lineHeight": 24,
+                     },
+                     false,
+                     Array [
+                       Object {
+                         "fontFamily": "Baloo2-SemiBold",
+                         "fontSize": 14,
+                         "letterSpacing": 0.5,
+                         "lineHeight": 24,
+                         "textTransform": "uppercase",
+                       },
+                       undefined,
+                     ],
+                     false,
+                   ]
                  }
+               >
+                 doesn’t belong to peach wallet
+               </Text>
+               <test-file-stub
+                 fill="#DF321F"
+                 style={
+                   Array [
+                     Object {
+                       "height": 20,
+                       "width": 20,
+                     },
+                     undefined,
+                   ]
                  }
                />
+             </View>
            </View>
          </View>
        </View>
      </View>
    </View>"
`;

exports[`AddressChecker should render correctly when address is invalid 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -268,15 +268,18 @@
                      "backgroundColor": "#FFFCFA",
                    },
                    Object {
                      "borderColor": "#2B1911",
                    },
-                   false,
-                   false,
+                   Object {
+                     "backgroundColor": "#FFFCFA",
+                   },
+                   Object {
+                     "borderColor": "#DF321F",
+                   },
                    Object {
-                     "marginBottom": 1,
-                     "marginTop": 1,
+                     "borderWidth": 2,
                    },
                    Array [
                      Object {
                        "borderRadius": 8,
                        "borderWidth": 2,
@@ -318,22 +321,21 @@
                        "paddingBottom": 0,
                        "paddingTop": 0,
                        "width": "100%",
                      },
                      Object {
-                       "color": "#BAADA7",
+                       "color": "#2B1911",
                      },
-                     false,
                      Object {
-                       "borderColor": "transparent",
-                       "borderWidth": 1,
+                       "color": "#2B1911",
                      },
+                     false,
                      false,
                    ]
                  }
                  textAlignVertical="center"
-                 value=""
+                 value="invalidAddress"
                />
                <View
                  style={
                    Object {
                      "flexDirection": "row",
@@ -464,11 +466,11 @@
                    ],
                    false,
                  ]
                }
              >
-                
+               bitcoin address is invalid
              </Text>
            </View>
            <View>
              <View
                style={"
`;

exports[`AddressChecker should render correctly while loading 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -318,22 +318,22 @@
                        "paddingBottom": 0,
                        "paddingTop": 0,
                        "width": "100%",
                      },
                      Object {
-                       "color": "#BAADA7",
+                       "color": "#2B1911",
                      },
                      false,
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                      },
                      false,
                    ]
                  }
                  textAlignVertical="center"
-                 value=""
+                 value="bcrt1qm5 ... jhfgd0"
                />
                <View
                  style={
                    Object {
                      "flexDirection": "row",
@@ -468,16 +468,13 @@
              >
                 
              </Text>
            </View>
            <View>
-             <View
-               style={
-                 Object {
-                   "height": 24,
-                 }
-               }
+             <ActivityIndicator
+               color="#F56522"
+               size="small"
              />
            </View>
          </View>
        </View>
      </View>"
`;
